[gd_scene load_steps=5 format=3 uid="uid://dsgm4fplk58dm"]

[ext_resource type="Script" uid="uid://crfhyynmj2bju" path="res://Scripts/tutorial.gd" id="1_ka2pi"]

[sub_resource type="CanvasTexture" id="CanvasTexture_kmev3"]

[sub_resource type="CanvasTexture" id="CanvasTexture_yh33m"]

[sub_resource type="CanvasTexture" id="CanvasTexture_xgx5e"]

[node name="Tutorial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ka2pi")
metadata/_edit_lock_ = true

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color(3.85046e-07, 0.856162, 0.856695, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_kmev3")
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color(0.407453, 0.000149253, 0.422558, 1)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 106.0
offset_top = -92.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("CanvasTexture_yh33m")
metadata/_edit_lock_ = true

[node name="TextureRect2" type="TextureRect" parent="."]
self_modulate = Color(0.407453, 0.000149253, 0.422558, 1)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 206.0
offset_top = -185.0
offset_bottom = -93.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("CanvasTexture_yh33m")
metadata/_edit_lock_ = true

[node name="TextureRect3" type="TextureRect" parent="."]
self_modulate = Color(0.407453, 0.000149253, 0.422558, 1)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 316.0
offset_top = -278.0
offset_bottom = -186.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("CanvasTexture_yh33m")
metadata/_edit_lock_ = true

[node name="TextureRect4" type="TextureRect" parent="."]
self_modulate = Color(0.407453, 0.000149253, 0.422558, 1)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 422.0
offset_top = -368.0
offset_bottom = -276.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("CanvasTexture_yh33m")
metadata/_edit_lock_ = true

[node name="TextureRect5" type="TextureRect" parent="."]
self_modulate = Color(0.407453, 0.000149253, 0.422558, 1)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 530.0
offset_top = -460.0
offset_bottom = -368.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("CanvasTexture_yh33m")
metadata/_edit_lock_ = true

[node name="TextureRect6" type="TextureRect" parent="."]
self_modulate = Color(0.407453, 0.000149253, 0.422558, 1)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 641.0
offset_top = -553.0
offset_bottom = -461.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("CanvasTexture_yh33m")
metadata/_edit_lock_ = true

[node name="Button1" type="Button" parent="."]
layout_mode = 0
offset_left = 121.0
offset_top = 502.0
offset_right = 182.0
offset_bottom = 533.0
text = "button1"
metadata/_edit_lock_ = true

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 335.0
offset_top = 318.0
offset_right = 396.0
offset_bottom = 349.0
text = "button2"
metadata/_edit_lock_ = true

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 552.0
offset_top = 134.0
offset_right = 613.0
offset_bottom = 165.0
text = "button3"
metadata/_edit_lock_ = true

[node name="Button4" type="Button" parent="."]
layout_mode = 0
offset_left = 711.0
offset_top = 38.0
offset_right = 772.0
offset_bottom = 69.0
text = "button4"
metadata/_edit_lock_ = true

[node name="Button5" type="Button" parent="."]
layout_mode = 0
offset_left = 933.0
offset_top = 37.0
offset_right = 994.0
offset_bottom = 68.0
text = "button5"
metadata/_edit_lock_ = true

[node name="TextureRect7" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 0, 1)
layout_mode = 0
offset_right = 135.0
offset_bottom = 115.0
texture = SubResource("CanvasTexture_xgx5e")

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -63.0
offset_bottom = 65.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 40
text = "X"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 136.0
offset_top = 1.0
offset_right = 472.0
offset_bottom = 66.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Tutorial"

[connection signal="pressed" from="Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
